fixing spacing on sidebar

--- a/app/styles/site/_sidebar.scss
+++ b/app/styles/site/_sidebar.scss
@@ -1,4 +1,4 @@
-.map-features {
+.pad-bottom {
   padding-bottom: 30px;
 }
 
